--- a/theory.ipynb
+++ b/theory.ipynb
@@ -14,8 +14,7 @@
     "\"\"\"\n",
     "What is FastApi ? \n",
     "----------------------\n",
-    "FastApi is a python web framework that let's you \n",
-    "    build APIs(Application Programing Interface)\n",
+    "FastApi is a python web framework that let's you - build APIs(Application Programing Interface)\n",
     "    quickly and efficiently. \n",
     "\"\"\""
    ]
@@ -34,11 +33,11 @@
     "------------------------------------------------\n",
     "Why we use FastApi ? \n",
     "------------------------------------------------\n",
-    "FastApi is a Much Faster (built on modern async tech)\n",
-    "More powerfull features (Like Automatic data validation)\n",
-    "Smart (Auto-generates docs and handles type checking)\n",
-    "Perfect for AI and ML Projects \n",
-    "        (Used by OpenAi,Microsoft,Netflix etc...)\n"
+    "-> FastApi is a Much Faster (built on modern async tech)\n",
+    "-> More powerfull features (Like Automatic data validation)\n",
+    "-> Smart (Auto-generates docs and handles type checking)\n",
+    "-> Perfect for AI and ML Projects \n",
+    "        (Used by OpenAi,Microsoft,Netflix etc...)"
    ]
   },
   {
