--- a/theory.ipynb
+++ b/theory.ipynb
@@ -80,11 +80,11 @@
     "=======================================\n",
     "How, FastApi works \n",
     "\n",
-    "@app.get(\"/hello)\n",
+    "@app.get(\"/hello\")\n",
     "def sayHello():\n",
     "    return {\"message\" : \"welcome to FastApi\"}\n",
     "\n",
-    "@app.get(\"/hello) :: means when someone visits \n",
+    "@app.get(\"/hello\") :: means when someone visits \n",
     "            /hello run this function. \n"
    ]
   },
