--- a/theory.ipynb
+++ b/theory.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a95dcdc6",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -23,13 +19,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "139f23d9",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "------------------------------------------------\n",
     "Why we use FastApi ? \n",
     "------------------------------------------------\n",
@@ -37,20 +30,18 @@
     "-> More powerfull features (Like Automatic data validation)\n",
     "-> Smart (Auto-generates docs and handles type checking)\n",
     "-> Perfect for AI and ML Projects \n",
-    "        (Used by OpenAi,Microsoft,Netflix etc...)"
+    "        (Used by OpenAi,Microsoft,Netflix etc...)\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "18242f29",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "------------------------------------------------\n",
     "What is API ?\n",
     "------------------------------------------------\n",
@@ -63,20 +54,18 @@
     "An API endpoint is just a URL that return data \n",
     "    insted of a webpages.\n",
     "\n",
-    "e.g.  https://myapp.com/api/users/\n"
+    "e.g.  https://myapp.com/api/users/\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "b791c8c5",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "=======================================\n",
     "How, FastApi works \n",
     "\n",
@@ -85,20 +74,19 @@
     "    return {\"message\" : \"welcome to FastApi\"}\n",
     "\n",
     "@app.get(\"/hello\") :: means when someone visits \n",
-    "            /hello run this function. \n"
+    "            /hello run this function. \n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "89280c60",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "===========================================\n",
     "Python 3.9+ installed. \n",
     "\n",
@@ -109,20 +97,18 @@
     "\n",
     "step 2: cd - go inside the folder \n",
     "\n",
-    "        #cd <foldername>\n"
+    "        #cd <foldername>\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9cbc4191",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "step 3 : create virtualenv \n",
     "\n",
     "        #python -m  venv env\n",
@@ -143,20 +129,18 @@
     "        \n",
     "        for mac ::\n",
     "\n",
-    "            source venv/bin/activate"
+    "            source venv/bin/activate\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3fcc3c82",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "step 5 : install fastApi and Uvicorn \n",
     "\n",
     "\n",
@@ -166,23 +150,24 @@
     "    uvicorn : the main web server that runs your FastApi \n",
     "\n",
     "Uvicorn is based on ASGI (Asynchronous Server Gateway Interface)\n",
-    "    That's why FastApi is lightning fast."
+    "    That's why FastApi is lightning fast.\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4c1ff653",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "step 6 :: create first API FastAPI project \n",
     "\n",
     "    inside the project folder create a python file main.py \n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
     "\"\"\"\n",
     "from fastapi import FastAPI \n",
     "\n",
@@ -199,6 +184,158 @@
     "    return {\"message\":\"ABOUT US CONTENT\"}\n",
     "\"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdf9768b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" \n",
+    "step 7 :: now, run your server \n",
+    "from same folder open terminal \n",
+    "\n",
+    "#uvicorn main:app --reload \n",
+    "\n",
+    "\n",
+    "-> main : main is a file name which we created \n",
+    "-> app :app is an instance we created \n",
+    "-> --reload : automatically restarts server when we save code \n",
+    "\n",
+    "\n",
+    "if everything going right it showing something like \n",
+    "\n",
+    "Uvicorn running on http://127.0.0.1:8000\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "067ff32a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "step 8 : test our api \n",
+    "\n",
+    "open browser and http://127.0.0.1:8000/\n",
+    "\n",
+    "or \n",
+    "\n",
+    "http://127.0.0.1:8000/about\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bec5bb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Step 9 ::: \n",
+    "\n",
+    "Automatic API Documentation \n",
+    "\n",
+    "FastApi Automatically Generates interactive docs - no setup needed\n",
+    "\n",
+    "http://127.0.0.1:8000/docs\n",
+    "http://127.0.0.1:8000/redoc   - ReDoc – beautiful API documentation\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f16164b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Path Parameters & Query Parameters \n",
+    "\n",
+    "almost most of apis send and receive data through these two types of \n",
+    "parameters.\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\"\"\"\n",
+    "what is parameters ?? \n",
+    "\n",
+    "=> parameters are values we pass to our API to get customized response.\n",
+    "\n",
+    "Types of parameters ??\n",
+    "\n",
+    "there are two types of parameters \n",
+    "\n",
+    "1) path   : /info/{name}            name which is part of URL path \n",
+    "2) Query  : /search?name=Anjali     name=Anjali passed after ? \n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "1) path parameter ::: path parameter are part of the URL itself. \n",
+    "\n",
+    "they are used when your endpoint represents a specific resource -> like     \n",
+    "        userid , productid etc... \n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79ddfe10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Add one more example \n",
+    "\n",
+    "Let's add one more dynamic route with a parameter \n",
+    "\"\"\"\n",
+    "\n",
+    "@app.get(\"/contact/{name}/\")\n",
+    "def contact(name:str):\n",
+    "    return {\"message\":f\"Hello {name}\"}\n",
+    "\n",
+    "\"\"\"\n",
+    "for testing ::: \n",
+    "http://127.0.0.1:8000/greet/Anjali\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa92e56d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Query parameter ::: \n",
+    "\n",
+    "e.g. \n",
+    "\n",
+    "@app.get(\"/add\")\n",
+    "def add(num1:int,num2:int):\n",
+    "    return {\"addition\" : f\"{num1+num2}\"}\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33dc9be3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
