--- a/theory.ipynb
+++ b/theory.ipynb
@@ -344,12 +344,196 @@
    "id": "33dc9be3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "FastApi Supports Async/Await which makes your Api faster and non-blocking (great for real time or \n",
+    "concurrent task)\n",
+    "\n",
+    "#async example \n",
+    "\n",
+    "@app.get(\"/add\")\n",
+    "async def addition(a:int,b:int):\n",
+    "    # await asyncio.sleep(2)   # simulates network/database delay\n",
+    "    result = a + b \n",
+    "    return {\"a\":a,\"b\":b,\"result\":result}\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46536daf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" \n",
+    "The Core Difference — “Blocking” vs “Non-Blocking”\n",
+    "===============================================================\n",
+    "def => Synchronous (Blocking)\n",
+    "\n",
+    "Code runs step by step.\n",
+    "\n",
+    "Each request waits until the previous one finishes.\n",
+    "\n",
+    "Suitable when you do CPU-heavy tasks or quick operations.\n",
+    "\n",
+    "===============================================================\n",
+    "e.g.\n",
+    "\n",
+    "@app.get(\"/normal\")\n",
+    "def get_data():\n",
+    "    data = slow_database_query()  # blocks until done\n",
+    "    return {\"data\": data}\n",
+    "\n",
+    "note :: If 10 users call this route at once, they wait in a queue — each handled one by one.\n",
+    "\n",
+    "===============================================================\n",
+    "===============================================================\n",
+    "async def => Asynchronous (Non-Blocking)\n",
+    "\n",
+    "Code runs concurrently.\n",
+    "\n",
+    "Server can handle multiple requests at once while waiting for slow tasks.\n",
+    "\n",
+    "Best for I/O-bound operations (like API calls, database queries, or file I/O).\n",
+    "\n",
+    "e.g.. \n",
+    "\n",
+    "import asyncio\n",
+    "\n",
+    "@app.get(\"/async_example\")\n",
+    "async def get_data():\n",
+    "    await asyncio.sleep(3)  # simulates slow I/O task\n",
+    "    return {\"msg\": \"done after 3 sec\"}\n",
+    "\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5c54066",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" \n",
+    "REAL WORLD EXAMPLE\n",
+    "\"\"\"\n",
+    "import asyncio\n",
+    "from fastapi import FastAPI \n",
+    "import time \n",
+    "\n",
+    "app = FastAPI() \n",
+    "@app.get(\"/\")\n",
+    "def welcome():\n",
+    "    return {\"message\":\"hello welcome\"}\n",
+    "\n",
+    "#blocking \n",
+    "# sync request waits 5 sec before starting\n",
+    "@app.get(\"/sync\")\n",
+    "def sync_task():\n",
+    "    time.sleep(5)\n",
+    "    return {\"message\" : \"Sync Done\"}\n",
+    "\n",
+    "#both start together, and both complete in ~5 sec total\n",
+    "@app.get(\"/async\")\n",
+    "async def async_task():\n",
+    "    await asyncio.sleep(5)\n",
+    "    return {\"message\":\"async task done\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec28c39c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" \n",
+    "The Real Difference Appears When You Run Multiple Requests at Once\n",
+    "\n",
+    "Let’s simulate two users calling the endpoints simultaneously.\n",
+    "\n",
+    "==> Case 1 — /sync\n",
+    "\n",
+    "If 2 people call /sync together:\n",
+    "\n",
+    "Request 1 starts → time.sleep(5) blocks the event loop\n",
+    "\n",
+    "Request 2 waits until request 1 finishes\n",
+    "---> Total = ~10 seconds for both responses.\n",
+    "\n",
+    "----------------------------------------------------------------\n",
+    "\n",
+    "==> Case 2 — /async\n",
+    "\n",
+    "If 2 people call /async together:\n",
+    "\n",
+    "Request 1 starts → await asyncio.sleep(5) does not block\n",
+    "\n",
+    "Request 2 starts immediately\n",
+    "\n",
+    "--> Both “sleep” in parallel\n",
+    "--> Total = ~5 seconds for both responses.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "322633bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" \n",
+    "Quick Demo Using curl\n",
+    "\n",
+    "Try this in two terminals:\n",
+    "\n",
+    "Terminal 1:\n",
+    "curl http://127.0.0.1:8000/sync\n",
+    "\n",
+    "Immediately open another terminal and run:\n",
+    "\n",
+    "curl http://127.0.0.1:8000/sync\n",
+    "\n",
+    "\n",
+    "You’ll notice:\n",
+    "\n",
+    "The second one starts only after the first one finishes (~10 seconds total)\n",
+    "\n",
+    "Now test /async:\n",
+    "\n",
+    "curl http://127.0.0.1:8000/async\n",
+    "\n",
+    "\n",
+    "in both terminals quickly.\n",
+    "You’ll see both finish around the same time (~5 seconds).\n",
+    "\n",
+    "That’s the real async power — concurrent execution.\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
