--- a/theory.ipynb
+++ b/theory.ipynb
@@ -515,6 +515,56 @@
     "That’s the real async power — concurrent execution.\n",
     "\"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55f0265e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"   \n",
+    "Request Body & POST method \n",
+    "\n",
+    "GET : used to fetch or read records \n",
+    "\n",
+    "using path & Query Parameters - small values we can pass in url \n",
+    "\n",
+    "\n",
+    "in real world in real project we need to send data like :: \n",
+    "\n",
+    "username\n",
+    "email\n",
+    "password\n",
+    "product details.. \n",
+    "\n",
+    "so, for this we use request body + post method \n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2df9c51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"   \n",
+    "what is Request Body ? \n",
+    "\n",
+    "data send inside the request not in the url. \n",
+    "\n",
+    "\n",
+    "e.g. \n",
+    "\n",
+    "{\n",
+    "  \"username\": \"anjali\",\n",
+    "  \"password\": \"12345\"\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
