--- a/theory.ipynb
+++ b/theory.ipynb
@@ -145,6 +145,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b1d894d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"  \n",
+    "note ::: outside the env create one folder (for your project inside this project create your main.py file)\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3fcc3c82",
    "metadata": {},
    "outputs": [],
@@ -334,6 +346,203 @@
     "@app.get(\"/add\")\n",
     "def add(num1:int,num2:int):\n",
     "    return {\"addition\" : f\"{num1+num2}\"}\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "589b2532",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"   \n",
+    "create your first fast api : to fetch records from specific table \n",
+    "\n",
+    "\n",
+    "create db_connection.py \n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "import sqlite3\n",
+    "\n",
+    "conn = sqlite3.connect(\"student.db\")\n",
+    "\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "cursor.execute(\"\"\"\n",
+    "        CREATE TABLE IF NOT EXISTS Student\n",
+    "               (id integer primary key autoincrement,\n",
+    "               name text,\n",
+    "               subject text,\n",
+    "               city text)\n",
+    "\"\"\")\n",
+    "conn.commit()\n",
+    "cursor.execute(\"delete from Student\")\n",
+    "cursor.execute(\"\"\"\n",
+    "               insert into Student (name,subject,city)\n",
+    "               values \n",
+    "               ('Anjali',\"python\",\"Ahmedabad\"),\n",
+    "               ('Priya',\"Java\",\"Mumbai\"),\n",
+    "               ('Shreya',\"Data science\",\"Delhi\")\n",
+    "               \"\"\")\n",
+    "\n",
+    "\n",
+    "cursor.execute(\"select * from Student\")\n",
+    "records = cursor.fetchall()\n",
+    "\n",
+    "for row in records:\n",
+    "    print(f\"{row[0]}  {row[1]}  {row[2]}\")\n",
+    "\n",
+    "conn.commit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d32aa09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"  \n",
+    "then inside your main.py \n",
+    "\n",
+    "from fastapi import FastAPI\n",
+    "import sqlite3\n",
+    "import os \n",
+    "\n",
+    "# create an instance of app \n",
+    "app = FastAPI() \n",
+    "\n",
+    "\n",
+    "# BASE_DIR = os.path.dirname(os.path.abspath(__file__))\n",
+    "# DB_PATH = os.path.join(BASE_DIR, \"student.db\")\n",
+    "\n",
+    "# for database connection \n",
+    "def get_db_connection():    \n",
+    "    conn = sqlite3.connect(\"../student.db\")\n",
+    "    conn.row_factory = sqlite3.Row  # allows dict-like access\n",
+    "    return conn\n",
+    "\n",
+    "\n",
+    "# now, fetch all records from student \n",
+    "@app.get(\"/students\")\n",
+    "def get_all_student():\n",
+    "    conn = get_db_connection()\n",
+    "    cursor = conn.cursor()\n",
+    "\n",
+    "    cursor.execute(\"select * from Student\")\n",
+    "    students = cursor.fetchall()\n",
+    "\n",
+    "    conn.close() \n",
+    "\n",
+    "    # convert rows to list of dict \n",
+    "\n",
+    "    result = [] \n",
+    "    for stu in students:\n",
+    "        result.append({\n",
+    "            \"id\" : stu[\"id\"],\n",
+    "            \"name\" : stu[\"name\"],\n",
+    "            \"subject\" : stu[\"subject\"],\n",
+    "            \"city\" : stu[\"city\"]\n",
+    "        })\n",
+    "    return result\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15b48918",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"  \n",
+    "NOTE : we can't create 2 instance of FastApi in same project folder \n",
+    "\n",
+    "e.g.   uvicorn main:app --reload \n",
+    "        and \n",
+    "       uvicorn main2:app2 --reload \n",
+    "\n",
+    "    it clash because both instance try to run on same port \n",
+    "\n",
+    "    if we really wants to run separate instance \n",
+    "\n",
+    "    we can change ports \n",
+    "\n",
+    "    e.g. uvicorn main2:app2 --port 8001\n",
+    "\n",
+    "Or Best solution create router \n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23e06d11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"  \n",
+    "Router ::: A place where we keep related APIs Together \n",
+    "\n",
+    "project structure ::: \n",
+    "\n",
+    "-> project \n",
+    "    - main.py \n",
+    "    - student.py\n",
+    "    - faculty.py \n",
+    "\n",
+    "\n",
+    "\n",
+    "main.py \n",
+    "\n",
+    "\"\"\"\n",
+    "from fastapi import FastAPI\n",
+    "\n",
+    "from student import student_router\n",
+    "\n",
+    "#creating instance of FastApi() \n",
+    "app = FastAPI() \n",
+    "\n",
+    "@app.get(\"/\")\n",
+    "def home():\n",
+    "    return {\"message\":\"this is main route\"}\n",
+    "\n",
+    "\n",
+    "#including  routers \n",
+    "app.include_router(student_router)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "613aa0c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# student.py in same project folder \n",
+    "\n",
+    "from fastapi import APIRouter\n",
+    "\n",
+    "student_router = APIRouter(\n",
+    "    prefix=\"/student\",\n",
+    "    tags=[\"students\"]  # swagger group \n",
+    ")\n",
+    "\n",
+    "@student_router.get(\"/\")\n",
+    "def display():\n",
+    "    return {\"message\":\"student display\"}\n",
+    "\n",
+    "\n",
+    "\"\"\"  \n",
+    "now, run your server \n",
+    "\n",
+    "#uvicorn main:app --reload \n",
+    "\n",
+    "http://127.0.0.1:8000/student/    \n",
     "\n",
     "\"\"\""
    ]
