--- a/project1/content.ipynb
+++ b/project1/content.ipynb
@@ -371,6 +371,107 @@
     "            return \"Product deleted !!!\"\n",
     "    return \"no product found !!\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62e2d7ef",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "==> what is SQLAlchemy ?\n",
+    "\n",
+    "SQLAlchemy is a popular Python library used to interact with databases.\n",
+    "It acts as a bridge between your Python code and your database.\n",
+    "\n",
+    "-> SQLAlchemy is a Database Toolkit + ORM (Object Relational Mapper) for Python\n",
+    "\n",
+    "==> What Databases Can SQLAlchemy Work With?\n",
+    "\n",
+    "SQLite\n",
+    "MySQL\n",
+    "PostgreSQL\n",
+    "Oracle Database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd2ce2f9",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "==>  installation \n",
+    "\n",
+    "# pip install sqlalchemy  pymysql \n",
+    "\n",
+    "# pip list "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ba04ff6",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "==> Database Configuration \n",
+    "\n",
+    "open cmd and execute below command \n",
+    "\n",
+    "-> #mysql -u root -p \n",
+    "\n",
+    "enter password :\n",
+    "\n",
+    "now create database \n",
+    "\n",
+    "-> create database fastapi_db1;\n",
+    "-> show databases;\n",
+    "-> use fastapi_db1;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18945b2c",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "=> creating sperate file  \"db_config.py\"\n",
+    "\n",
+    "#--> create_engine - it create a connection between python and mysql\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "#--> sessionmaker : this create database session \n",
+    "\n",
+    "\"\"\"\n",
+    "temporary conversation with database \n",
+    "insert,update,read,.etc  without session we can't talk with database\n",
+    "\"\"\"\n",
+    "\n",
+    "#--> declarative_base\n",
+    "\"\"\"\n",
+    "this is a base class that all your database models will inherit from it. \n",
+    "\"\"\"\n",
+    "from sqlalchemy.orm import sessionmaker,declarative_base\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
