--- a/project1/content.ipynb
+++ b/project1/content.ipynb
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "main.py\n",
-    "\n",
+    "--------------------------------\n",
     "from fastapi import FastAPI\n",
     "\n",
     "app = FastAPI() \n",
@@ -45,8 +45,9 @@
     "def greet():\n",
     "    return \"Good Morning\"\n",
     "\n",
+    "--------------------------------\n",
+    "--> for run below commands need to execute\n",
     "\n",
-    "//// for run below commands need to execute \n",
     "# uvicorn main:app --reload"
    ]
   },
@@ -469,9 +470,174 @@
     "\"\"\"\n",
     "this is a base class that all your database models will inherit from it. \n",
     "\"\"\"\n",
-    "from sqlalchemy.orm import sessionmaker,declarative_base\n",
-    "\n"
+    "from sqlalchemy.orm import sessionmaker,declarative_base\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d341d19",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "==> DATABASE_URL\n",
+    "\n",
+    "DATABASE_URL = \"mysql+pymysql://root:yourpassword@localhost/fastapi_db1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4aa42194",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "==> session local : \n",
+    "\n",
+    "SessionLocal = sessionmaker(\n",
+    "    autocommit=False,\n",
+    "    autoflush=False,\n",
+    "    bind=engine\n",
+    ")\n",
+    "\n",
+    "This creates a session factory means Whenever we call\n",
+    "\n",
+    "db = SessionLocal()\n",
+    "\n",
+    "It creates a new database session\n",
+    "\n",
+    "now, let me understand with parameters \n",
+    "\n",
+    "--> autocommit=False  (changes will not saved automatically )\n",
+    "\n",
+    "we must manually write : \n",
+    "\n",
+    "db.commit()  // this is good because prevent accidental save and gives control \n",
+    "\n",
+    "--> autoflush=False  (send changes to database before commit)\n",
+    "\n",
+    "we are disabled autoflush false to control behaviour manually\n",
+    "\n",
+    "--> bind = engine (this connects session to our MySQl engine)\n",
+    "\n",
+    "This connects session to our MySQl engine \n",
+    "Without bind → session doesn’t know which database to use\n",
+    "\n",
+    "\n",
+    "--> Base \n",
+    "\n",
+    "Base = declarative_base()  # This creates a base class.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7998308d",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "===>>> Final \"db_config.py\"\n",
+    "\n",
+    "#--> create_engine - it create a connection between python and mysql\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "#--> sessionmaker : this create database session \n",
+    "\n",
+    "\"\"\"\n",
+    "temporary conversation with database \n",
+    "insert,update,read,.etc  without session we can't talk with database\n",
+    "\"\"\"\n",
+    "\n",
+    "#--> declarative_base\n",
+    "\"\"\"\n",
+    "this is a base class that all your database models will inherit from it. \n",
+    "\"\"\"\n",
+    "from sqlalchemy.orm import sessionmaker,declarative_base\n",
+    "\n",
+    "# ==============================\n",
+    "# step : 1 Database Configuration\n",
+    "# ==============================\n",
+    "\n",
+    "DATABASE_URL = \"mysql+pymysql://root:123456789@localhost/fastapi_db1\"\n",
+    "\n",
+    "# ==============================\n",
+    "# step : 2 Creating Engine \n",
+    "# ==============================\n",
+    "\n",
+    "#engine creation \n",
+    "engine = create_engine(DATABASE_URL,echo=True)  ##echo Shows SQL queries in terminal\n",
+    "\n",
+    "# ==============================\n",
+    "# step : 3  Create Session\n",
+    "# ===============================\n",
+    "\n",
+    "SessionLocal = sessionmaker(\n",
+    "    autocommit = False,\n",
+    "    autoflush=False,\n",
+    "    bind=engine\n",
+    ")\n",
+    "\n",
+    "# ==============================\n",
+    "# step : 4  Base class for model \n",
+    "# ==============================\n",
+    "Base = declarative_base()\n",
+    "\n",
+    "\n",
+    "\n",
+    "# ==============================\n",
+    "# step : 5 Dependency (For FastAPI)\n",
+    "# ==============================\n",
+    "\n",
+    "def get_db():\n",
+    "    db = SessionLocal()\n",
+    "    try: \n",
+    "        yield db \n",
+    "    finally:\n",
+    "        db.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04ca7933",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "==> Now, time for model(table) creation \n",
+    "\n",
+    "In FastApi we use : \n",
+    "                                libraries\n",
+    "Database table                  -> sqlalchemy\n",
+    "Request/Response validation     -> pydantic "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db5eb6eb",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
