--- a/project1/content.ipynb
+++ b/project1/content.ipynb
@@ -39,7 +39,7 @@
     "--------------------------------\n",
     "from fastapi import FastAPI\n",
     "\n",
-    "app = FastAPI() \n",
+    "app = FastAPI()  # object creation of FastAPI\n",
     "\n",
     "@app.get(\"/\")\n",
     "def greet():\n",
@@ -80,10 +80,10 @@
     "\n",
     "Retrive records from specific record \n",
     "\n",
-    "here we are going make one dummy model class in model.py \n",
+    "here we are going make one dummy model class in models.py \n",
     "file at same location \n",
     "\n",
-    "model.py\n",
+    "models.py\n",
     "------------------------------------------------------\n",
     "class Product:\n",
     "    id : int \n",
@@ -112,11 +112,12 @@
    "outputs": [],
    "source": [
     "now, time to call this model in main.py file \n",
-    "\n",
+    "---------------------------------------------\n",
     "main.py\n",
-    "\n",
+    "---------------------------------------------\n",
     "from fastapi import FastAPI\n",
     "from models import * \n",
+    "\n",
     "app = FastAPI() \n",
     "\n",
     "products = [\n",
@@ -172,6 +173,8 @@
    },
    "outputs": [],
    "source": [
+    "==> What is Pydantic \n",
+    "--------------------------------------------------------\n",
     "Pydantic is a Python library used for data validation and \n",
     "data parsing using type hints.\n",
     "\n",
@@ -212,8 +215,8 @@
    },
    "outputs": [],
    "source": [
-    "What is BaseModel?\n",
-    "\n",
+    "==> What is BaseModel?\n",
+    "--------------------------------------------------------\n",
     "BaseModel is the main class from Pydantic.\n",
     "\n",
     "importing the core validation engine.\n",
@@ -232,7 +235,7 @@
    },
    "outputs": [],
    "source": [
-    "when we use pydantic and BaseModel we don't need to \n",
+    "==> Note :: when we use pydantic and BaseModel we don't need to \n",
     "create our separate constructor or __init__() method \n",
     "\n",
     "e.g.\n",
