--- a/project1/content.ipynb
+++ b/project1/content.ipynb
@@ -277,6 +277,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2da1f46a",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "==> Fetch All products \n",
+    "---------------------------------\n",
+    "main.py \n",
+    "---------------------------------\n",
+    "from fastapi import FastAPI\n",
+    "from models import * \n",
+    "app = FastAPI() \n",
+    "\n",
+    "# we have to pass keyword arguments in pydantic model \n",
+    "products = [\n",
+    "    Product(id=1, name=\"Mobile\", description=\"Iphone 16\", price=68000, qty=20),\n",
+    "    Product(id=2, name=\"Laptop\", description=\"Dell\", price=57000, qty=40),\n",
+    "    Product(id=3, name=\"AC\", description=\"Iphone 18\", price=68000, qty=30)\n",
+    "]\n",
+    "\n",
+    "@app.get(\"/products\")\n",
+    "def get_all_products():\n",
+    "    return products"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4ef1934a",
    "metadata": {
     "vscode": {
