--- a/project1/content.ipynb
+++ b/project1/content.ipynb
@@ -317,9 +317,9 @@
    "outputs": [],
    "source": [
     "=> Fetch product by specific id \n",
-    "\n",
+    "--------------------------------------------------------\n",
     "main.py \n",
-    "\n",
+    "--------------------------------------------------------\n",
     "@app.get(\"/products/{id}\")\n",
     "def get_specific_product(id : int):\n",
     "    return products[id-1]\n",
@@ -419,12 +419,13 @@
    "outputs": [],
    "source": [
     "==> what is SQLAlchemy ?\n",
-    "\n",
+    "--------------------------------------------------------\n",
     "SQLAlchemy is a popular Python library used to interact with databases.\n",
     "It acts as a bridge between your Python code and your database.\n",
     "\n",
     "-> SQLAlchemy is a Database Toolkit + ORM (Object Relational Mapper) for Python\n",
     "\n",
+    "--------------------------------------------------------\n",
     "==> What Databases Can SQLAlchemy Work With?\n",
     "\n",
     "SQLite\n",
@@ -445,10 +446,10 @@
    "outputs": [],
    "source": [
     "==>  installation \n",
+    "--------------------------------------------------------\n",
+    "pip install sqlalchemy  pymysql \n",
     "\n",
-    "# pip install sqlalchemy  pymysql \n",
-    "\n",
-    "# pip list "
+    "pip list "
    ]
   },
   {
@@ -463,6 +464,7 @@
    "outputs": [],
    "source": [
     "==> Database Configuration \n",
+    "--------------------------------------------------------\n",
     "\n",
     "open cmd and execute below command \n",
     "\n",
@@ -471,6 +473,8 @@
     "enter password :\n",
     "\n",
     "now create database \n",
+    "\n",
+    "--------------------------------------------------------\n",
     "\n",
     "-> create database fastapi_db1;\n",
     "-> show databases;\n",
@@ -489,21 +493,23 @@
    "outputs": [],
    "source": [
     "=> creating sperate file  \"db_config.py\"\n",
+    "--------------------------------------------------------\n",
+    "--> create_engine - it create a connection between python and mysql\n",
     "\n",
-    "#--> create_engine - it create a connection between python and mysql\n",
     "from sqlalchemy import create_engine\n",
     "\n",
-    "#--> sessionmaker : this create database session \n",
+    "--> sessionmaker : this create database session \n",
     "\n",
     "\"\"\"\n",
     "temporary conversation with database \n",
     "insert,update,read,.etc  without session we can't talk with database\n",
     "\"\"\"\n",
     "\n",
-    "#--> declarative_base\n",
+    "--> declarative_base\n",
     "\"\"\"\n",
     "this is a base class that all your database models will inherit from it. \n",
     "\"\"\"\n",
+    "\n",
     "from sqlalchemy.orm import sessionmaker,declarative_base\n"
    ]
   },
@@ -519,7 +525,7 @@
    "outputs": [],
    "source": [
     "==> DATABASE_URL\n",
-    "\n",
+    "--------------------------------------------------------\n",
     "DATABASE_URL = \"mysql+pymysql://root:yourpassword@localhost/fastapi_db1\""
    ]
   },
@@ -535,12 +541,14 @@
    "outputs": [],
    "source": [
     "==> session local : \n",
-    "\n",
+    "--------------------------------------------------------\n",
     "SessionLocal = sessionmaker(\n",
     "    autocommit=False,\n",
     "    autoflush=False,\n",
     "    bind=engine\n",
     ")\n",
+    "\n",
+    "--------------------------------------------------------\n",
     "\n",
     "This creates a session factory means Whenever we call\n",
     "\n",
@@ -549,6 +557,7 @@
     "It creates a new database session\n",
     "\n",
     "now, let me understand with parameters \n",
+    "--------------------------------------------------------\n",
     "\n",
     "--> autocommit=False  (changes will not saved automatically )\n",
     "\n",
@@ -565,10 +574,11 @@
     "This connects session to our MySQl engine \n",
     "Without bind → session doesn’t know which database to use\n",
     "\n",
+    "--------------------------------------------------------\n",
     "\n",
     "--> Base \n",
     "\n",
-    "Base = declarative_base()  # This creates a base class.\n"
+    "Base = declarative_base()  # This creates a base class."
    ]
   },
   {
@@ -584,20 +594,7 @@
    "source": [
     "===>>> Final \"db_config.py\"\n",
     "\n",
-    "#--> create_engine - it create a connection between python and mysql\n",
     "from sqlalchemy import create_engine\n",
-    "\n",
-    "#--> sessionmaker : this create database session \n",
-    "\n",
-    "\"\"\"\n",
-    "temporary conversation with database \n",
-    "insert,update,read,.etc  without session we can't talk with database\n",
-    "\"\"\"\n",
-    "\n",
-    "#--> declarative_base\n",
-    "\"\"\"\n",
-    "this is a base class that all your database models will inherit from it. \n",
-    "\"\"\"\n",
     "from sqlalchemy.orm import sessionmaker,declarative_base\n",
     "\n",
     "# ==============================\n",
@@ -611,7 +608,8 @@
     "# ==============================\n",
     "\n",
     "#engine creation \n",
-    "engine = create_engine(DATABASE_URL,echo=True)  ##echo Shows SQL queries in terminal\n",
+    "engine = create_engine(DATABASE_URL,echo=True)  \n",
+    "#echo Shows SQL queries in terminal\n",
     "\n",
     "# ==============================\n",
     "# step : 3  Create Session\n",
@@ -627,7 +625,6 @@
     "# step : 4  Base class for model \n",
     "# ==============================\n",
     "Base = declarative_base()\n",
-    "\n",
     "\n",
     "\n",
     "# ==============================\n",
